# cvideo-click-pave

./: .actrc  .ai-context.md  .checkov.yml  .flake8  .gitignore  .pymarkdown.json  BOOTSTRAP_GUIDE.md  GITHUB_SETUP.md  Makefile  README.md  SECURITY_ANALYSIS.md  SECURITY_SCANNING.md  WARP.md  mypy.ini  pave_infra.tf  pylance_check_results.json  pyproject.toml  requirements.txt  security-plan.tfplan
.github/workflows/: security.yml  terraform.yaml
docs/: terraform-state-migration.md
scripts/: __init__.py  backend_manager.py  cleanup.py  collect_pylance_errors.py  create_bootstrap.py  credentials.py  destroy_bootstrap.py  drift_detection.py  fix_bootstrap_s3.py  get_root_credentials_help.py  github_setup.py  markdown_lint.py  migrate_terraform_state.py  pylance_check.py  pylance_check_mcp.py  rotate_keys.py  security_scan.py  status.py  test_infrastructure.py  test_route53_permissions.py  validate.py  validate_bootstrap.py  yaml_lint.py
